@@ -1,5 +1,8 @@
 This file documents the revision history for the SNClient+ agent.
 
+next:
+         - check_service: fix case insensitive excludes
+
 0.32     Thu Mar 13 12:55:24 CET 2025
          - add alpine support
          - fix check_process when empty-state is set to OK
